--- a/styles/nanobot.less
+++ b/styles/nanobot.less
@@ -14,6 +14,12 @@
 
 		.menu {
 			float: right;
+			font-size: 75%;
+			vertical-align: middle;
+			a {
+				padding-left: 15px;
+				color: @text-color-info !important;
+			}
 		}
 	}
 
